--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+login-webcam (1.0.1) unstable; urgency=low
+
+  * Script refactoring (shellcheck)
+
+ -- GenaBitu <genabitu@gmail.com>  Tue, 14 Jun 2016 22:44:58 +0200
+
 login-webcam (1.0.0) unstable; urgency=low
 
   * Initial Release (Closes: #827281)
