--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-login-webcam (1.0.1) unstable; urgency=low
+login-webcam (1.0.1ubuntu1) xenial; urgency=low
 
   * Script refactoring (shellcheck)
 
