--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+login-webcam (1.0.2) unstable; urgency=medium
+
+  * Script not failing when no /dev/video0 is present
+
+ -- GenaBitu <genabitu@gmail.com>  Wed, 15 Jun 2016 14:44:23 +0200
+
 login-webcam (1.0.1) unstable; urgency=low
 
   * Script refactoring (shellcheck)
